deploy/ternal-no-pvc/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ternal-auth
  labels:
    app.kubernetes.io/part-of: ternal
    pod-security.kubernetes.io/enforce: restricted
    pod-security.kubernetes.io/enforce-version: latest
