deploy/ternal-no-pvc/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ternal-goauthy
  namespace: ternal-auth
  labels:
    app.kubernetes.io/name: goauthy
    app.kubernetes.io/part-of: ternal
spec:
  clusterIP: None
  publishNotReadyAddresses: true
  selector:
    app.kubernetes.io/name: goauthy
    app.kubernetes.io/part-of: ternal
  ports:
    - name: http
      port: 8080
      targetPort: http
    - name: peer
      protocol: UDP
      port: 8444
      targetPort: peer
---
apiVersion: v1
kind: Service
metadata:
  name: ternal-goauthy-client
  namespace: ternal-auth
  labels:
    app.kubernetes.io/name: goauthy
    app.kubernetes.io/part-of: ternal
spec:
  selector:
    app.kubernetes.io/name: goauthy
    app.kubernetes.io/part-of: ternal
  ports:
    - name: http
      port: 8080
      targetPort: http
